# Latte

./: CMakeLists.txt
latte/: Core.cpp  Core.h  Files.cpp  Files.h  Main.cpp  PerfTimer.h  main.cpp
latte/core/: BVHNode.h  CPURenderer.cpp  CPURenderer.h  Camera.h  CookTorrance.h  Debug.h  GPURenderer.cpp  GPURenderer.h  HitResult.h  Light.cpp  Light.h  Main.cpp  Material.h  Mesh.cpp  Mesh.h  PixelBuffer.cpp  PixelBuffer.h  Ray.cpp  Ray.h  Raylet.cpp  Raylet.h  Rect2D.h  RenderDevice.cpp  RenderDevice.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  TraceResult.h  Vertex.h
latte/core/accel/bvh/: BVH.cpp  BVH.h  BVHNode.h
latte/preview/: AccelerationStructPreview.cpp  AccelerationStructPreview.h  BVHVisualizer.cpp  BVHVisualizer.h  Visualizer.h
libs/glad/include/glad/: glad.h
shaders/preview/: ModelPreview.frag  ModelPreview.vert  Visualization.frag  Visualization.vert
